Fixed: Left aligned footer.

--- a/static/style.css
+++ b/static/style.css
@@ -22,5 +22,4 @@ a {
 }
 footer {
     padding-top: 30px; /* Adds 30px of space above the footer text */
-    text-align: center; /* Centers the text in the footer */
 }
